--- a/package.json
+++ b/package.json
@@ -6,14 +6,34 @@
   "author": "Sony Thomas",
   "type": "commonjs",
   "main": "main.js",
-  "scripts": {
-    "start": "concurrently \"npm run dev\" \"npm run electron\"",
-    "dev": "vite",
-    "electron": "electron .",
-    "build": "vite build"
+  "build": {
+  "appId": "com.njansony.datalabeler",
+  "productName": "Data Labeler",
+  "files": [
+    "dist/**/*",
+    "main.js",
+    "preload.js",
+    "package.json"
+  ],
+  "directories": {
+    "buildResources": "assets"
   },
+  "win": {
+    "target": "nsis",
+    "icon": "assets/icon.ico"
+  },
+  "linux": {
+    "icon": "assets/icon.png"
+  }
+},
+  "scripts": {
+  "dev": "vite",
+  "start": "electron .",
+  "build:renderer": "vite build",
+  "pack": "npm run build:renderer && electron-builder --dir",
+  "dist": "npm run build:renderer && electron-builder"
+},
   "dependencies": {
-    "electron": "^37.2.5",
     "form-data": "^4.0.4",
     "image-size": "^2.0.2",
     "node-fetch": "^3.3.2",
@@ -21,8 +41,10 @@
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
+    "electron": "^37.2.5",
     "@vitejs/plugin-react": "^4.7.0",
     "concurrently": "^9.2.0",
+    "electron-builder": "^26.0.12",
     "vite": "^7.0.6",
     "wait-on": "^8.0.4"
   }
