--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 },
   "scripts": {
     "dev": "concurrently \"npm run start:renderer\" \"npm run start:electron\"",
-    "start": "npm run build:renderer && electron .",
+  "start": "cross-env NODE_ENV=production npm run build:renderer && cross-env NODE_ENV=production electron .",
     "start:renderer": "vite",
     "start:electron": "wait-on http://localhost:5173 && electron .",
     "build:renderer": "vite build",
@@ -48,6 +48,7 @@
     "concurrently": "^9.2.0",
     "electron-builder": "^26.0.12",
     "vite": "^7.0.6",
-    "wait-on": "^8.0.4"
+  "wait-on": "^8.0.4",
+  "cross-env": "^7.0.3"
   }
 }
